# lib/db/src/schema/index.ts
@@ -7,3 +7,4 @@ export * from "./messages";
 export * from "./photos";
 export * from "./equipment";
 export * from "./time-off";
+export * from "./notifications";
